--- a/src/style/Navbar.css
+++ b/src/style/Navbar.css
@@ -1,5 +1,6 @@
 .navbar {
-  background-color: #060b26;
+  background-color: #00A084;
+  background-color: #1AAE5D;
   height: 80px;
   display: flex;
   justify-content: flex-start;
@@ -10,6 +11,7 @@
   margin: auto;
   vertical-align: middle;
   color: #f5f5f5;
+  text-shadow: 0 0 5px #0f6335;
 }
 
 .menu-bars {
@@ -19,7 +21,7 @@
 }
 
 .nav-menu {
-  background-color: #060b26;
+  background-color: #1AAE5D;
   width: 250px;
   height: 100vh;
   display: flex;
@@ -57,7 +59,7 @@
 }
 
 .nav-text a:hover {
-  background-color: #1a83ff;
+  background-color: #1FCD6D;
 }
 
 .nav-menu-items {
@@ -65,7 +67,7 @@
 }
 
 .navbar-toggle {
-  background-color: #060b26;
+  background-color: #1AAE5D;
   width: 100%;
   height: 80px;
   display: flex;
