--- a/src/style/MyGarden.css
+++ b/src/style/MyGarden.css
@@ -2,3 +2,17 @@
     display: flex;
     flex-direction: row;
 }
+.img-board{
+    opacity: 1;
+    display: block;
+    width: 100%;
+    height: auto;
+    transition: .5s ease;
+    backface-visibility: hidden;
+    margin-left: 15em;
+    align-content: center;
+    width: 15cm;
+    height: 15cm;
+    z-index: -1;
+} 
+
