front basic finished

--- a/src/style/MyProfile.css
+++ b/src/style/MyProfile.css
@@ -11,20 +11,23 @@ body{
   }
   
   .card{
-    width: 310px;
-    height: 627px;
-    padding: 15px;
-    margin-top: 40px;
+    width: 600px;
+    height: 800px;
+    padding: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 1em;
+    text-align: center;
     border-radius: 25px;
     display: flex;
     justify-content: center;
-    box-shadow: 15px 10px 25px 0px  #3fa1a9;
-    background: #fff;
-    background-image: url('https://github.com/OlgaKoplik/CodePen/blob/master/leaf2.png?raw=true'), url('https://github.com/OlgaKoplik/CodePen/blob/master/leaf.png?raw=true');
+    /* box-shadow: 15px 10px 25px 0px  #3fa1a9; */
+    background: rgb(176, 230, 216);
+    /* background-image: url('https://github.com/OlgaKoplik/CodePen/blob/master/leaf2.png?raw=true'), url('https://github.com/OlgaKoplik/CodePen/blob/master/leaf.png?raw=true'); */
     background-repeat: no-repeat, no-repeat;
     background-position: 120% -5%, 200% -40%;
-    background-size: 40%, 80%;
-    animation: open .5s;
+    /* background-size: 40%, 80%; */
+    /* animation: open .5s; */
   }
   @keyframes open {
     0%  {background-position: 166% -25%, 220% -69%;}
@@ -117,6 +120,16 @@ body{
     overflow-wrap: break-word;
   }
   .status{
+    /* text-align: center; */
+    max-width: 220px;
+    overflow-wrap: break-word;
+  }
+  .KillCount{
+    /* text-align: center; */
+    max-width: 220px;
+    overflow-wrap: break-word;
+  }
+  .AllPlant{
     /* text-align: center; */
     max-width: 220px;
     overflow-wrap: break-word;
