--- a/src/style/Login.css
+++ b/src/style/Login.css
@@ -1,4 +1,7 @@
 .login{
-    margin-top: 10%;
     margin: auto;
+    margin-top: 5em;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
 }
