--- a/src/style/MyProfile.css
+++ b/src/style/MyProfile.css
@@ -135,19 +135,17 @@ body{
     overflow-wrap: break-word;
   }
   button{
-    position: relative;
+    /* position: relative;
     color: #054231;
     letter-spacing: 1px;
     margin: 20px;
     font-size: 18px;
     padding: 10px;
-    /* text-align: center; */
+    text-align: center;
     transition: 0.5s;
-    border-radius: 10px;
     cursor: pointer;
-    border-radius: 25px;
     border: none;
-    background: #64d488;
+    background: #64d488; */
   }
   .save{
     font-weight: 600;
@@ -161,12 +159,12 @@ body{
     color: #fff;
     width: 180px;
   }
-  button:hover{
+  /* button:hover{
     left: 0;
     color: #fff;
     width: 180px;
     box-shadow: 0px 0px 20px 0px  #63d3a6;
-  }
+  } */
   button:focus{
     outline: none;
   }
