--- a/src/style/SetTimer.css
+++ b/src/style/SetTimer.css
@@ -1,25 +1,13 @@
-.inputGroup{
-    border: rosybrown;
-    vertical-align: middle;
-}
-
-.timer-title{
-    
-}
-
-/* .col-sm-4{
-     padding-left: smaller space value; 
-     padding-right: smaller space value;
-} */
-.SetTimer{
-    border: 5px gainsboro;
-    margin: auto;
+.SetTimer {
+    text-align: center;
+    border-radius: 10px;
     margin-top: 2em;
     margin-bottom: 2em;
-    margin-right: 2em;
-    /* background-color:rgb(255, 240, 212); */
-    
+    margin-left: 30em;
+    margin-right: 30em;
+    padding: 2em;
+    background-color:rgba(255, 255, 255, 70%);
 }
 .timer-settimer{
-    background-color:rgb(255, 240, 212);
+    margin: 0.5em;
 }
