--- a/src/style/SetTimer.css
+++ b/src/style/SetTimer.css
@@ -5,7 +5,8 @@
     margin-bottom: 2em;
     margin-left: 30em;
     margin-right: 30em;
-    padding: 2em;
+    padding: 1em;
+    width: 50%;
     background-color:rgba(255, 255, 255, 70%);
 }
 .timer-settimer{
