--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -1,8 +1,10 @@
 .budImageContainer{
 	display:inline-block;
 	margin-left: 0em;
-	width: 100px;
-	height: 100px;
+	margin-top: -70em;
+	width: 500px;
+	height: 500px;
+; 
 }
 
 
