--- a/src/style/SetTimer.css
+++ b/src/style/SetTimer.css
@@ -7,7 +7,7 @@
     margin-right: 30em;
     padding: 1em;
     width: 50%;
-    background-color:rgba(255, 255, 255, 70%);
+    /* background-color:rgba(255, 255, 255, 70%); */
 }
 .timer-settimer{
     margin: 0.5em;
