--- a/src/style/MyGarden.css
+++ b/src/style/MyGarden.css
@@ -3,24 +3,9 @@
     flex-direction: row;
 }
 .img-garden{
-    opacity: 1;
-    display: block;
-    width: 100%;
-    height: auto;
-    transition: .5s ease;
-    backface-visibility: hidden;
-    margin-left: 10em;
-    margin: auto;
-    align-content: center;
-    width: 15cm;
-    height: 15cm;
+    width: 700px;
+    height: 700px;
     background-image: url('../Image/ground1.png');
-    /* z-index: -1; */
-
-} 
-
-.img-grass{
-    size: 1ch;
-    margin-left: 5em;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
-
