--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
 
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 .Home,
@@ -12,7 +12,7 @@
 .MyGarden {
   display: flex;
   height: 90vh;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   font-size: 3rem;
 }
