--- a/src/style/SetTimer.css
+++ b/src/style/SetTimer.css
@@ -1,14 +1,7 @@
 .SetTimer {
-    text-align: center;
-    border-radius: 10px;
-    margin-top: 2em;
-    margin-bottom: 2em;
-    margin-left: 30em;
-    margin-right: 30em;
-    padding: 1em;
-    width: 50%;
-    /* background-color:rgba(255, 255, 255, 70%); */
-}
-.timer-settimer{
-    margin: 0.5em;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 2em 0 2em 0;
 }
